log/build_2024-02-26_17-55-48/worms_mech/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/oligo/worms_mech_ws/install/worms_mech/lib/python3.10/site-packages/worms_mech/gait_manager.py", line 212
    if msg.data == "test_gait"
                              ^
SyntaxError: expected ':'

Sorry: IndentationError: unexpected indent (camera_scanner.py, line 45)
